<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name" translatable="false">Astroblaze</string>
    <string name="start">Start</string>
    <string name="hiscores">Hiscores</string>
    <string name="options">Options</string>
    <string name="pause" translatable="false">Pause</string>
    <string name="exit">Exit</string>
    <string name="sound_volume">Sound</string>
    <string name="sound_perc" translatable="false">%1$d%%</string>
    <string name="music_volume">Music</string>
    <string name="music_perc" translatable="false">%1$d%%</string>
    <string name="ui_volume">UI Volume</string>
    <string name="ui_perc" translatable="false">%1$d%%</string>
    <string name="screenShake">Screen Shake</string>
    <string name="vibration">Vibration</string>
    <string name="back">Back</string>
    <string name="cancel">Cancel</string>
    <string name="upgrades_for">Upgrades for %1$s</string>
    <string name="backToGame">Continue</string>
    <string name="backToMenu">Exit to menu</string>
    <string name="gameOver">Game Over</string>
    <string name="unlockShip">Unlock $ %1$d</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="swipeRight">→</string>
    <string name="swipeLeft">←</string>
    <string name="swipe">Swipe</string>
    <string name="buyUpgrade">Upgrade</string>
    <string name="moneyPrint" translatable="false">$ %1$d</string>
    <string name="changePilotName">Change</string>
    <string name="enterPilotName">Enter pilot name:</string>
    <string name="anonymous">Anonymous</string>
    <string name="scoreLabel">Score:</string>
    <string name="moneyLabel">Cash:</string>
    <string name="rankLabel">Rank:</string>
    <string name="rankPrintLoading" translatable="false">…</string>
    <string name="rank_hiscore">Rank</string>
    <string name="name_hiscore">Name</string>
    <string name="score_hiscore">Score</string>
    <string name="level_hiscore">Level</string>
    <string name="upgradename_shopitem">Upgrade name</string>
    <string name="currentupgrade_shopitem">Current upgrade</string>
    <string name="nextupgrade_shopitem">Next upgrade</string>
    <string name="price_shopitem">Price</string>
    <string name="flip_screen">Flip Screen</string>

    <string name="shieldUpgrade">Shield (%1$s)</string>
    <string name="speedUpgrade">Speed (%1$s)</string>
    <string name="damageUpgrade">Damage (%1$s)</string>

    <string name="laserCapacityUpgrade">Laser Capacitor (%1$s)</string>
    <string name="maxMissilesUpgrade">Max Missiles (%1$s)</string>
    <string name="turretSpeedUpgrade">Turret Speed (%1$s)</string>

    <string name="level0">
        "Mission: Tutorial.\n\n\n"

        "An introduction to game controls and gameplay flow.\n\n"
        "Reward: $%1$d.\n"
    </string>

    <string name="level1">
        "Mission %1$d.\n\n"

        "Launch a scout mission after pirate nicknamed %2$s.\n\n"
        "WANTED: %2$s\n"
        "DEAD OR ALIVE\n\n"
        "Reward: $%3$d"
    </string>

    <string name="level2">
        "Mission %1$d.\n\n"

        "Clear nearby area from pirates.\n\n"
        "Reward: $%2$d"
    </string>

    <string name="level3">
        "Mission %1$d.\n\n"

        "Pirates made an derelict station their home.\n"
        "Make sure they vacate the area.\n\n"
        "Reward: $%2$d"
    </string>

    <string name="level4">
        "Mission %1$d.\n\n"

        "Mercenaries are pestering operations of anonymous corporation.\n"
        "Scout the area and destroy their ships.\n\n"
        "Reward: $%2$d"
    </string>

    <string name="level5">
        "Mission %1$d\n\n"
        "Calling any mercenaries!\n\n"

        "Pirates have been spotted in outskirts of the solar system.\n"
        "Find and destroy, reward upon uploading sensor readings of attached coordinates.\n\n"
        "Reward: $ %2$d"
    </string>

    <string name="level6">
        "Mission %1$d\n\n"

        "A hostile surveillance station is defended by a group of pirates led by %2$s.\n"
        "Intercept and destroy them and their boss, bombers will clean up the station shortly after.\n\n"
        "Reward: $ %3$d"
    </string>

    <string name="level7">
        "Mission %1$d\n\n"

        "A convoy of transports intends to pass a dangerous trade route.\n"
        "Notorious pirate named %2$s is rumored to set up an ambush, clear out the pirates so
        that the convoy can pass safely .\n\n"
        "Reward: $ %3$d"
    </string>

    <string name="level8">
        "Mission %1$d\n\n"

        "A group of pirates led by %2$s is blocking resupplying a station on the outskirts of the solar system.\n"
        "Find and kill them.\n\n"
        "Reward: $ %3$d"
    </string>

    <string name="shipStatHp">Shield: %1$.2f</string>
    <string name="shipStatGuns">Guns: %1$dx %2$.1f</string>
    <string name="shipStatMissiles">Missiles: %1$dx %2$.1f</string>
    <string name="shipStatTurrets">Turrets: %1$dx %2$.1f</string>
    <string name="shipStatLasers">Lasers: %1$.1f</string>
    <string name="shipStatSpeed">Speed: %1$.1f</string>
    <string name="shipStatBonus" translatable="false"><![CDATA[<b><font color=#00ff00>&nbsp;( %1$s%% )</font></b>]]></string>

    <string name="ship0">Shuttle</string>
    <string name="ship1">Yacht</string>
    <string name="ship2">Destroyer</string>
    <string name="ship3">Sentinel</string>
    <string name="ship4">Archer</string>

    <string name="shipDesc0">Small, fast, lightly armed, but extremely fragile ship</string>
    <string name="shipDesc1">Fast, armored ship but light on weapons</string>
    <string name="shipDesc2">Armored but slow warship with large amount of forward facing guns.</string>
    <string name="shipDesc3">Light armored fast ship with large amount of turrets</string>
    <string name="shipDesc4">Medium armored ship with large amount of missile ports</string>

    <string name="LevelStartReady">Ready!</string>
    <string name="LevelStartSet">Set!</string>
    <string name="LevelStartGo">Go!</string>
    <string name="LevelComplete">Level Complete!</string>
    <string name="BossIncoming">Boss Incoming!</string>
    <string name="enemies_destroyed">Enemies destroyed</string>
    <string name="MiniBossIncoming">MiniBoss Incoming!</string>
    <string name="TutorialTouchScreenToMove">Touch the screen to move</string>
    <string name="TutorialPrimaryWeapons">Guns and turrets are always active, just aim and kill</string>
    <string name="TutorialDodgeBulletsAndEnemies">Dodge the bullets and enemies</string>
    <string name="TutorialUseButtonToFireMissiles">Fire missiles using the button, high damage spread over area</string>
    <string name="TutorialUseButtonToFireLasers">Fire laser using the button, high damage piercing beam</string>
    <string name="TutorialBonusCash">Cash bonuses grant extra money.</string>
    <string name="TutorialBonusShield">Shield bonuses restore your shield.</string>
    <string name="TutorialBonusLaser">Laser bonuses restore your laser capacitor charge.</string>
    <string name="TutorialBonusMissiles">Missile bonuses replenish your missiles.</string>
    <string name="TutorialBonusLife">Life bonuses grant extra lives.</string>
    <string name="TutorialComplete">Tutorial complete!</string>
    <string name="statsKills">Kills:</string>
    <string name="statsDamageDone">Damage Done:</string>
    <string name="statsDamageTaken">Damage Taken:</string>
    <string name="statsMoney">Money:</string>
    <string name="statsScore">Score:</string>
    <string name="multiplesOf" translatable="false"><![CDATA[<b>%1$dx <font color=#00ff00>&nbsp;$ %2$d</font></b>]]></string>

    <string name="enemyBoss">Enemy Boss</string>
    <string name="enemySimple">Grunt</string>
    <string name="enemyTrainingDummy">Training Dummy</string>
    <string name="enemyWavy">Wavy enemy</string>
    <string name="enemyRammer">Rammer</string>
    <string name="enemyMoneyDrop">Cash hauler</string>
    <string name="enemyMiniboss1">Miniboss</string>


</resources>
