<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayoutLevel"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FragmentLevel">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLevelSwipe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toTopOf="@+id/levelDescScrollView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvLevelRight"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:shadowColor="@color/menu_bg_color"
            android:shadowDx="2.3"
            android:shadowDy="2.5"
            android:shadowRadius="3.6"
            android:text="@string/swipeRight"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tvLevelSwipe"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvLevelSwipe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:shadowColor="@color/menu_bg_color"
            android:shadowDx="2.3"
            android:shadowDy="2.5"
            android:shadowRadius="3.6"
            android:text="@string/swipe"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/tvLevelRight"
            app:layout_constraintStart_toEndOf="@id/tvLevelLeft"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvLevelLeft"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:shadowColor="@color/menu_bg_color"
            android:shadowDx="2.3"
            android:shadowDy="2.5"
            android:shadowRadius="3.6"
            android:text="@string/swipeLeft"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/tvLevelSwipe"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/levelDescScrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/constraintLevelSwipe"
        tools:context=".FragmentLevel">

        <TextView
            android:id="@+id/tvLevelDescription"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:text="@string/level5" />
    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>