<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    tools:context=".FragmentHiscores">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_margin="8dp"
        android:background="@drawable/menu_background">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hiscores"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ProgressBar
            android:id="@+id/pgLoading"
            style="?android:attr/progressBarStyle"
            android:layout_width="64dp"
            android:layout_height="64dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvHiscoresBoard"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            android:layoutAnimation="@anim/rv_layout_anim"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnExitToMenu"
            tools:listitem="@layout/hiscores_item" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnExitToMenu"
            android:layout_width="@dimen/button_width"
            android:layout_height="@dimen/button_height"
            android:layout_alignParentBottom="true"
            android:layout_centerInParent="true"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/menu_button_states"
            android:gravity="center"
            android:shadowColor="@color/menu_bg_color"
            android:shadowDx="2.3"
            android:shadowDy="2.5"
            android:shadowRadius="3.6"
            android:text="@string/back"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/rvHiscoresBoard"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="75dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="75dp"
            android:layout_marginBottom="3dp"
            app:layout_constraintBottom_toTopOf="@+id/rvHiscoresBoard"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnExitToMenu"
            app:layout_constraintVertical_bias="1.0">

            <TextView
                android:id="@+id/textView10"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="20dp"
                android:shadowColor="@color/menu_bg_color"
                android:shadowDx="2.3"
                android:shadowDy="2.5"
                android:shadowRadius="3.6"
                android:text="@string/rank_hiscore"
                android:textAlignment="center"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/textView4"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="220dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="30dp"
                android:shadowColor="@color/menu_bg_color"
                android:shadowDx="2.3"
                android:shadowDy="2.5"
                android:shadowRadius="3.6"
                android:text="@string/name_hiscore"
                android:textAlignment="center"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/textView11"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/textView10"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:shadowColor="@color/menu_bg_color"
                android:shadowDx="2.3"
                android:shadowDy="2.5"
                android:shadowRadius="3.6"
                android:text="@string/score_hiscore"
                android:textAlignment="center"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/textView12"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/textView4"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:shadowColor="@color/menu_bg_color"
                android:shadowDx="2.3"
                android:shadowDy="2.5"
                android:shadowRadius="3.6"
                android:text="@string/level_hiscore"
                android:textAlignment="center"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/textView11"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:id="@+id/table_barrier"
            android:layout_width="0dp"
            android:layout_height="3dp"
            android:layout_marginStart="80dp"
            android:layout_marginEnd="80dp"
            android:background="@drawable/table_barrier_style"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@+id/rvHiscoresBoard"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout2"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>